[tool.poetry]
name = "exhibit"
version = "0.1.0"
description = ""
authors = ["red <red@kalab.sk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = { git = "https://github.com/RedKinda/discord.py", branch = "dev/userapps" }
orjson = "^3.9.15"
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
